[gd_scene load_steps=7 format=3 uid="uid://cvfojni6liccy"]

[ext_resource type="Script" path="res://UI_stuff/UI_scrips/menu_ui.gd" id="1_s0cai"]
[ext_resource type="Texture2D" uid="uid://buue1mh88br0u" path="res://UI_stuff/UI_images/setsymb.png" id="2_fw87a"]
[ext_resource type="Texture2D" uid="uid://c22ct22plo5b4" path="res://UI_stuff/UI_images/qeustion mark.jpg" id="3_jk1wa"]
[ext_resource type="Texture2D" uid="uid://c3x7usvedkb5k" path="res://UI_stuff/UI_images/leave.png" id="4_3inop"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mhye"]
bg_color = Color(0.0612635, 0.0904829, 0.131047, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.113363, 0.151691, 0.308936, 0.6)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5alvr"]
bg_color = Color(0.0157725, 0.0227599, 0.134488, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0cai")

[node name="MenuBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 47.0
offset_right = 802.0
offset_bottom = 580.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3mhye")

[node name="Settings" type="Panel" parent="MenuBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = 33.0
offset_right = 129.5
offset_bottom = 73.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5alvr")

[node name="SettingsSymbol" type="TextureRect" parent="MenuBox/Settings"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -16.0
offset_right = -7.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.987623, 1.00695)
texture = ExtResource("2_fw87a")
expand_mode = 1

[node name="S_lab" type="Label" parent="MenuBox/Settings"]
layout_mode = 0
offset_left = 48.0
offset_right = 122.0
offset_bottom = 23.0
scale = Vector2(1.98573, 1.56538)
text = "SETTINGS"

[node name="S_Button" type="Button" parent="MenuBox/Settings"]
layout_mode = 0
offset_right = 261.0
offset_bottom = 37.0

[node name="HOWTOPLAY" type="Panel" parent="MenuBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = 110.0
offset_right = 129.5
offset_bottom = 150.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5alvr")

[node name="questionsymbol" type="TextureRect" parent="MenuBox/HOWTOPLAY"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -16.0
offset_right = -7.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.978309, 1)
texture = ExtResource("3_jk1wa")
expand_mode = 1

[node name="H_lab" type="Label" parent="MenuBox/HOWTOPLAY"]
layout_mode = 0
offset_left = 40.0
offset_top = 4.0
offset_right = 149.0
offset_bottom = 27.0
scale = Vector2(1.62091, 1.39883)
text = "HOW TO PLAY"

[node name="HTP_Button" type="Button" parent="MenuBox/HOWTOPLAY"]
layout_mode = 0
offset_right = 261.0
offset_bottom = 37.0

[node name="LEAVEGAME" type="Panel" parent="MenuBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = 430.0
offset_right = 129.5
offset_bottom = 470.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5alvr")

[node name="SettingsSymbol" type="TextureRect" parent="MenuBox/LEAVEGAME"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -16.0
offset_right = -7.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.994814, 1)
texture = ExtResource("4_3inop")
expand_mode = 1

[node name="L_lab" type="Label" parent="MenuBox/LEAVEGAME"]
layout_mode = 0
offset_left = 83.0
offset_top = 5.0
offset_right = 131.0
offset_bottom = 28.0
scale = Vector2(1.57785, 1.23594)
text = "LEAVE"

[node name="L_button" type="Button" parent="MenuBox/LEAVEGAME"]
layout_mode = 0
offset_right = 261.0
offset_bottom = 37.0

[node name="RETURNTOGAME" type="Panel" parent="MenuBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = 358.0
offset_right = 129.5
offset_bottom = 398.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5alvr")

[node name="RETURN_SYMBOL" type="TextureRect" parent="MenuBox/RETURNTOGAME"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -17.0
offset_right = -7.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.994814, 1)
texture = ExtResource("4_3inop")
expand_mode = 1

[node name="R_lab" type="Label" parent="MenuBox/RETURNTOGAME"]
layout_mode = 0
offset_left = 74.0
offset_top = 4.0
offset_right = 137.0
offset_bottom = 27.0
scale = Vector2(1.57785, 1.23594)
text = "RETURN
"

[node name="R_Button" type="Button" parent="MenuBox/RETURNTOGAME"]
layout_mode = 0
offset_right = 261.0
offset_bottom = 37.0

[connection signal="pressed" from="MenuBox/Settings/S_Button" to="." method="_on_s_button_pressed"]
[connection signal="pressed" from="MenuBox/HOWTOPLAY/HTP_Button" to="." method="_on_htp_button_pressed"]
[connection signal="pressed" from="MenuBox/HOWTOPLAY/HTP_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MenuBox/LEAVEGAME/L_button" to="." method="_on_l_button_pressed"]
[connection signal="pressed" from="MenuBox/RETURNTOGAME/R_Button" to="." method="_on_r_button_pressed"]
